# prizm

./: .gitignore  .prettierignore  .prettierrc.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LOBEHUB_INDEX.md  README.md  SECURITY.md  package.json  vitest.config.ts  命名.md  竞品
docs/: ARCHITECTURE.md  NEW_USER_FLOW_AUDIT.md  OPEN_SOURCE_UX_AUDIT.md  OpenClaw-TaskPlanning-Report.md  README-EN.md  SETTINGS_PANEL_AUDIT.md  TODO-local-embedding.md  USER_GUIDE.md  agent-optimization-plan.md  bg-session-interactive-test-guide.md  bg-session-task-system.md  browser-control-options.md  chat-system-test-scenarios.md  configuration.md  feedback-system.md  glossary.md  lobster-workflow-reference.md  local-embedding.md  search-logic-diagram.md  skill-module-architecture.md  stagehand-custom-llm-client.md  workflow-system.md  workflow-writing-spec.md
patches/: @browserbasehq+stagehand+3.0.8.patch  @lobehub+ui+4.36.2.patch  @lobehub+ui+4.37.0.patch  node-pty+1.1.0.patch
prizm/: .env.example  .gitignore  AGENT-EXPERIMENT.md  CLAUDE.md  CONTEXT_COMPRESSION.md  GIT-SETUP.md  (+13 more)
prizm-client-core/: package.json  tsconfig.json  vitest.config.ts
prizm-electron-client/: esbuild-output.txt  index.html  notification.html  package.json  quickpanel.html  tsconfig.electron.json  tsconfig.json  vite.config.mts  vitest.config.ts
prizm-shared/: package.json  tsconfig.json  tsup.config.ts
prizm-tauri-client/: index.html  package.json  vite.config.ts
prizm-tauri-client/src-tauri/: Cargo.toml  config.json  tauri.conf.json
prizm-tauri-client/src-tauri/src/: config.rs  lib.rs  main.rs
(+941 files in other folders)
